<hr>s are too much lengthy desktop view fixed

--- a/src/assets/styles/partials/AddAuthorForm.css
+++ b/src/assets/styles/partials/AddAuthorForm.css
@@ -12,9 +12,8 @@
 .aa-form-container .ca-title .ca-title-text {
   border-bottom: 3px solid #084732;
   margin: 0;
-  max-height: 1.35em;
   max-width: 7em;
-  min-width: 7em;
+  min-width: 6em;
 }
 .aa-form-container .close-btn {
   padding-top: 0.4em;
