--- a/src/assets/styles/partials/AddBookForm.scss
+++ b/src/assets/styles/partials/AddBookForm.scss
@@ -17,7 +17,7 @@ $create_btn_color: #00579c;
             border-bottom: 3px solid $cb_title_color;
             margin: 0;
             max-height: 1.35em;
-            max-width: 10em;
+            max-width: 7em;
             min-width: 6em;
         }
     }
